static/themes/common/base.css
/* ... */
.kiwi-settings-advanced-table > div:nth-child(6n+1),
.kiwi-settings-advanced-table > div:nth-child(6n+2),
.kiwi-settings-advanced-table > div:nth-child(6n+3) {
    background-color: var(--brand-shadow);
}

.kiwi-network-name-options {
    background-color: var(--brand-default-fg);
}

.kiwi-network-name-option:hover,
.kiwi-network-name-option.active {
    background-color: var(--brand-primary);
    color: var(--brand-default-bg);
}

.kiwi-network-name-option {
    color: var(--brand-default-bg);
}

/* Global Close Icon */
.kiwi-close-icon,
.kiwi-close-icon:hover {
    background: var(--brand-error);
}

/* Away Status Indicator */
.kiwi-awaystatusindicator,
.kiwi-avatar-status {
    background-color: var(--brand-primary);
    fill: var(--brand-primary);
}

.kiwi-awaystatusindicator.kiwi-awaystatusindicator--away,
.kiwi-avatar-status--away {
    background-color: var(--brand-warning);
    fill: var(--brand-warning);
}

.kiwi-awaystatusindicator.kiwi-awaystatusindicator--offline,
.kiwi-avatar-status--offline {
    background-color: var(--brand-error);
    fill: var(--brand-error);
}

/* Buffer Key */
.kiwi-bufferkey-button {
    border-color: var(--brand-default-bg);
}

/* Selected text */
:root {
    --brand-selected: rgba(0, 0, 255, 0.3);
}

